...
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/done"
                android:layout_gravity="end"
                android:layout_marginRight="15dp"
                android:src="@drawable/doneicon"/>

            <LinearLayout
                android:layout_width="wrap_content"
...
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/profileUsername"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textColorHint="#AE636363"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text=""
...
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="50dp"
                    android:id="@+id/profileHistory"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="Your Orders"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/profile_shape"/>

                <androidx.legacy.widget.Space
...
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/profileLogout"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="Logout"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/profile_shape"/>

            </LinearLayout>
...
