<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PlaceOrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E453AEF6"
        android:id="@+id/cart_toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shipping Details"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your shipment details"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipName"
            android:textColorHint="#AE636363"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="Name"
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipPhone"
            android:textColorHint="#AE636363"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Phone no."
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipAddress"
            android:textColorHint="#AE636363"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="Address"
            android:background="@drawable/edittextshape"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/shipCity"
            android:textColorHint="#AE636363"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="City Name"
            android:background="@drawable/edittextshape"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Total Price:"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cartpricetotal"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirmOrder"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:text="PLACE ORDER"
            android:elevation="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="#E453AEF6"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

</RelativeLayout>