<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFiles.CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E453AEF6"
        android:id="@+id/cart_toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Cart"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/cart_list"
        android:padding="10dp"
        android:layout_below="@id/cart_toolbar"
        android:layout_above="@+id/llTotal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llTotal"
        android:layout_above="@+id/llBottom"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center_vertical|end"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:text="Total Price:"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/totalprice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:id="@id/llBottom">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="#E453AEF6"
            android:text="BUY NOW"
            android:id="@+id/next_button"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>